--- a/source/scss/_partial/home-post-list.scss
+++ b/source/scss/_partial/home-post-list.scss
@@ -1,8 +1,7 @@
 .home.post-list {
     margin: 2em 0;
     .post-list-item {
-        border-bottom: 1px solid #ddd;
-        border-top: 1px solid #fff;
+        background: #fff;
         margin-bottom: 20px;
         padding: 20px;
     }
