--- a/source/scss/_partial/post.scss
+++ b/source/scss/_partial/post.scss
@@ -1,7 +1,8 @@
 .post {
     padding-top: 1em;
+    background: #fff;
     .post-block {
-        padding: 20px;
+        padding: 20px 36px;
     }
 }
 .post-list-item {
