--- a/layout/index.jade
+++ b/layout/index.jade
@@ -3,6 +3,7 @@ extends partial/layout
 block container
     include mixins/post
     +posts()
+    +recentPostList()
 
 block pagination
     include mixins/paginator
