--- a/layout/mixins/post.jade
+++ b/layout/mixins/post.jade
@@ -37,6 +37,26 @@ mixin postList()
                     != item.title
         - })
 
+// - Recent Page
+mixin recentPostList ()
+    .side-wrap
+        .about
+            p.module-title 关于我
+            div.about-wrap
+                p hello, this is monster
+        .recent-post-list
+            p.module-title 近期文章
+            div.recent-wrap
+                - page.posts.each(function (item) {
+                    .post-item
+                        a.post-title-link(href= url_for(item.path))
+                            != item.title
+                - })
+                div.read-more
+                    a.read-more-link(href="http://www.monster1935.site/blog/archives") 查看更多
+
+
+
 //- About Page
 mixin about(item)
     .post
