--- a/layout/post.jade
+++ b/layout/post.jade
@@ -10,6 +10,7 @@ block description
 block container
     include mixins/post
     +post(page)
+    +recentPostList()
 
 block pagination
     include mixins/paginator
