--- a/source/scss/_partial/base.scss
+++ b/source/scss/_partial/base.scss
@@ -27,7 +27,7 @@ body {
     background: #eee;
     .wrap-inner {
         margin: 0 auto;
-        max-width: 1500px;
+        max-width: 1300px;
     }
 }
 .iconfont{
@@ -68,7 +68,8 @@ hr {
 code {
     margin: 0 2px;
     padding: 3px 5px;
-    color: #e96900;
+    color: #555;
+    background-color: #f7f7f7;
     border-radius: 2px;
     white-space: inherit;
 }
