--- a/source/scss/_partial/home-post-list.scss
+++ b/source/scss/_partial/home-post-list.scss
@@ -3,7 +3,7 @@
     .post-list-item {
         background: #fff;
         margin-bottom: 20px;
-        padding: 20px;
+        padding: 20px 36px;
     }
     .post-content{
         h2, h3, h4, h5, h6 {
