--- a/source/scss/_partial/post.scss
+++ b/source/scss/_partial/post.scss
@@ -12,7 +12,6 @@
             margin-bottom: 0;
         }
         .post-info {
-            float:right;
             font-size: 14px;
             margin-right: 10px;
         }
@@ -22,14 +21,26 @@
     .post-title {
         margin: 0.65em 0;
         font-size: 24px;
+        margin-bottom: 0;
     }
 
     .post-info {
         color: #999999;
-        font-size: 16px;
-        margin: 1.2em 0;
-        span {
-            margin-left: 0.5rem;
+        font-size: 14px;
+        overflow: hidden;
+        .post-info-item {
+            float: left;
+            margin-right: 14px;
+            .iconfont {
+                margin-right: 4px;
+                font-size: 14px;
+            }
+            span.tag {
+                background: #eee;
+                padding: 2px 10px;
+                border-radius: 4px;
+                margin-right: 6px;
+            }
         }
         a.post-from {
             margin-left: 0.5rem;
@@ -133,8 +144,8 @@
 code,
 pre {
     font-size: 0.8em;
-    background-color: #f8f8f8;
-    font-family: 'Roboto Mono', Monaco, courier, monospace;
+    background-color: #f7f7f7;
+    font-family: consolas, Monaco, courier, monospace;
 }
 
 .highlight {
@@ -222,7 +233,7 @@ pre {
     .symbol .string,
     .value,
     .regexp {
-        color: #049694;
+        color: #42b983;
     }
     .title {
         color: #83B917;
@@ -251,7 +262,7 @@ pre {
     .apache .cbracket,
     .tex .command,
     .prompt {
-        color: #049694;
+        color: #42b983;
     }
     .comment,
     .java .annotation,
