update the style of footer and other module

--- a/layout/mixins/post.jade
+++ b/layout/mixins/post.jade
@@ -80,7 +80,8 @@ mixin postList()
             if change
                 h2.archive-year!= year
             .post-item
-                +postInfo(item)
+                span.post-time
+                    != full_date(item.date, 'll')
                 a.post-title-link(href= url_for(item.path))
                     != item.title
         - })
