--- a/source/scss/_partial/archive-post-list.scss
+++ b/source/scss/_partial/archive-post-list.scss
@@ -12,6 +12,11 @@
     .post-title-link {
         font-size: 1rem;
     }
+    .post-time {
+        display: inline-block;
+        width: 150px;
+        color: #999;
+    }
     .post-title-link {
         color: #049694;
         word-break: break-all;
