--- a/source/scss/_partial/base.scss
+++ b/source/scss/_partial/base.scss
@@ -25,9 +25,17 @@ body {
     flex: 1;
     overflow: auto;
     background: #eee;
+    display: flex;
+    flex-flow: column;
     .wrap-inner {
         margin: 0 auto;
         max-width: 1300px;
+        flex: 1;
+    }
+    footer {
+        flex: 0 0 50px;
+        height: 50px;
+        line-height: 50px;
     }
 }
 .iconfont{
