--- a/source/scss/_partial/copyright.scss
+++ b/source/scss/_partial/copyright.scss
@@ -1,10 +1,9 @@
 footer {
-    padding-bottom: 1px;
+    background: #4c4c4c;
     .copyright {
-        margin: 4em 0;
-        border-top: 1px solid #ddd;
         text-align: center;
         p, a {
+            margin: 0;
             color: #aaa;
             font-size: 14px;
             font-weight: 100;
