--- a/source/scss/_partial/home-post-list.scss
+++ b/source/scss/_partial/home-post-list.scss
@@ -4,6 +4,7 @@
         background: #fff;
         margin-bottom: 20px;
         padding: 20px 36px;
+        box-shadow: 0 1px 3px rgba(0,0,0,.1);
     }
     .post-content{
         h2, h3, h4, h5, h6 {
