--- a/source/scss/_partial/post.scss
+++ b/source/scss/_partial/post.scss
@@ -1,9 +1,16 @@
 .post {
     max-width: 1000px;
     overflow: hidden;
+    display: flex;
+    flex-flow: column;
     .post-block {
         padding: 20px 36px;
         background: #fff;
+        flex: 1;
+        box-shadow: 0 1px 3px rgba(0,0,0,.1);
+    }
+    .paginator {
+        margin-top: 30px;
     }
 }
 .post-list-item {
