--- a/layout/tags.jade
+++ b/layout/tags.jade
@@ -2,7 +2,7 @@ extends partial/layout
 
 block container
     include mixins/post
-    +lab(page)
+    +tagList(page)
 
 block copyright
     include partial/copyright
