--- a/source/scss/apollo.scss
+++ b/source/scss/apollo.scss
@@ -5,6 +5,9 @@
 @import "_partial/header";
 @import "_partial/home-post-list";
 @import "_partial/archive-post-list";
+@import "_partial/tags-list";
+@import "_partial/categories-list";
+@import "_partial/about-post-list";
 @import "_partial/post";
 @import "_partial/footer";
 @import "_partial/mq";
