--- a/source/scss/_partial/archive-post-list.scss
+++ b/source/scss/_partial/archive-post-list.scss
@@ -11,6 +11,7 @@
     .post-item {
         height: 40px;
         line-height: 40px;
+        margin-left: 20px;
         &:hover {
             .post-time {
                 color: #666;
@@ -30,9 +31,10 @@
     .post-time {
         display: inline-block;
         position: relative;
-        width: 150px;
+        width: 120px;
+        font-size:14px;
         color: #999;
-        border-right: 4px solid #999;
+        border-right: 2px solid #999;
         margin-right: 20px;
     }
     .post-time::before {
@@ -40,11 +42,11 @@
         content: "";
         border-radius: 50%;
         border: 1px solid #999;
-        right: -8px;
-        top: 10px;
-        width: 10px;
-        height: 10px;
-        background: #999;
+        right: -5px;
+        top: 15px;
+        width: 6px;
+        height: 6px;
+        background: #eee;
         transition-duration: 0.2s;
         transition-timing-function: ease-in-out;
         transition-delay: 0s;
