add the blog index style in small screen

--- a/source/scss/_partial/categories-list.scss
+++ b/source/scss/_partial/categories-list.scss
@@ -1,5 +1,6 @@
 .categories {
     max-width: 1000px;
+    margin: 0 auto;
     .categories-title {
         margin: 0.65em 0;
         color: #2c3e50;
