--- a/source/scss/_partial/base.scss
+++ b/source/scss/_partial/base.scss
@@ -31,6 +31,7 @@ body {
         margin: 0 auto;
         max-width: 1300px;
         min-width: 800px;
+        width: 80%;
         flex: 1;
     }
     footer {
